--- a/static/style.css
+++ b/static/style.css
@@ -6,13 +6,15 @@
 
     --button-send-color:  #017add;
 
-    --msg-content-font: Calibri;
+    --msg-content-font: BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;;
 
     --global-bkg-color: #000000;
 
     --msg-content-text-size: 70px;
     --msg-date-text-size: 20px;
     --msg-pseudo-text-size: 50px;
+
+    --msg-content-corner-round: 100px;
 
 
     color-scheme: light;  /*eviter les bug avec le theme noir */
@@ -24,39 +26,84 @@ body {
      background-color: var(--global-bkg-color);
 }
 
-h1 {
-       font-family: var(--msg-content-font);
+#h1box{
+     border-bottom-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+    font-family: var(--msg-content-font);
     color: var(--msg-content-color);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    /* height:7%; */
     margin: 0;
-    padding: 20px;
+   
     backdrop-filter: blur(10px);   
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 20; /* au-dessus du reste */
 
-    font-size: 60px;
 
-    transform: translateY(-100px); 
+    transform: translateY(-100px);  
     opacity: 0;
 
     animation: h1-spawn 0.5s 0.7s ease-out forwards;
 
 
+  }
+  
+  @keyframes h1-spawn {
+      0% {
+          transform: translateY(-100px);
+          opacity: 0;
+      }
+      100% {
+          transform: translateY(0px);
+          opacity: 1;
+      }
+  }
+
+h1 {
+   padding: 20px;
+   font-size: 60px;
+    margin: 0;
 }
 
-@keyframes h1-spawn {
-    0% {
-        transform: translateY(-100px);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0px);
-        opacity: 1;
-    }
+h1:not(.waiting) {
+   color: var(--msg-content-color);
+   
 }
+
+
+
+h1.waiting {
+
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 40%,
+    rgba(255, 255, 255, 0.25) 50%,
+    rgba(255, 255, 255, 1) 60%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  background-size: 200% auto;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation-delay: 2.5s;
+  animation: wave 3s linear infinite;
+  
+   background-position: 200% 0%;
+}
+
+@keyframes wave {
+  0% {
+    background-position: 200% 0%;
+  }
+  100% {
+    background-position: -200% 0%;
+  }
+}
+
 
 #messages {
     overflow-y: auto;
@@ -79,7 +126,7 @@ h1 {
     bottom: 0;
     left: 0;
     width: 100%;
-    border-radius: 50px;
+    border-radius: 60px;
     backdrop-filter: blur(10px);   
     background-color: rgba(0, 0, 0, 0.4);
     margin: 10px;
@@ -119,12 +166,13 @@ h1 {
 .message-input {
     width: 70%;
 
-    border-radius: 50px;
+    border-radius: 100px;
     border-style: solid;
     border-width: 10px;
     border-color: #3f3f3f;
 
     padding: 20px;
+    padding-left: 30px;
 
 
    
@@ -141,8 +189,9 @@ h1 {
    
 }
 
+
 #send-button {
-    border-radius: 50px;
+    border-radius: 100px;
     border-style: none;
     font-weight: bold;
     width: 15%;
@@ -156,6 +205,75 @@ h1 {
     font-size: var(--msg-content-text-size);
 }
 
+
+
+#button-icon.move {
+
+  /* transform-origin: -20px center;  */
+   filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.4));
+  animation: orbit 10s 0.3s ease infinite; 
+ 
+}
+@keyframes orbit {
+
+  0% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(-70px);
+  }
+  60% {
+    transform: translateY(70px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+#button-icon:not(.move) {
+
+  transform-origin: center; 
+  animation: none;
+   filter: none;
+}
+
+#button-icon.exit {
+  /* pour que la rotation s’effectue autour du centre de l’icône */
+  filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.5));
+  transform-origin: center;
+  animation: flyUp 0.6s ease-out forwards;
+}
+
+@keyframes flyUp {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+30% {
+   transform: rotate(-45deg);
+   opacity: 1;
+  }
+  100% {
+    transform: translateY(-700px) rotate(-45deg); /* ↗ rotation + montée */
+    opacity: 0;
+  }
+}
+
+
+@keyframes fly-away {
+  0% {
+    transform: translateX(0) scale(1);
+    opacity: 1;
+  }
+  60% {
+    transform: translateX(60px) scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(130px) scale(0);
+    opacity: 0;
+  }
+}
 #send-button:hover {
     cursor: pointer;
     background-color: rgb(0, 140, 220); 
@@ -181,7 +299,7 @@ h1 {
    
     padding: 40px;
     margin: 0; 
-    border-radius: 60px;
+    border-radius:  var(--msg-content-corner-round);
     border-bottom-left-radius: 0;
 
     word-wrap: break-word;   /* Coupe les mots trop longs */
@@ -199,9 +317,18 @@ h1 {
 }
 
 .msg-content.me {
-    border-radius: 60px;
+    border-radius: var(--msg-content-corner-round);
     border-bottom-right-radius: 0;
+    /* border-bottom-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0; */
     background-color: var(--msg-content-me-bgk-color);
+    
+    color: var(--msg-content-color);
+    
+   
+}
+.msg-content.me:not(.no-anim) {
     background: linear-gradient(
     to right,
     var(--msg-content-me-bgk-color) 0%,          /* bleu à gauche */
@@ -212,10 +339,10 @@ h1 {
     );
     background-size: 300% 100%;
     background-position: 200% 50%; /* position de départ à droite */
-    color: var(--msg-content-color);
-    
-    animation: moveGradient 0.5s linear forwards; /* une seule fois, ne revient pas en arrière */
+     animation: moveGradient 0.5s linear forwards; /* une seule fois, ne revient pas en arrière */
 }
+
+
 
 @keyframes moveGradient {
     from {
@@ -273,3 +400,68 @@ h1 {
     }
 }
 
+
+
+
+/* .state .icon {
+
+  transform: scale(1.25);
+  transition: all 0.3s ease;
+
+}
+.state .icon svg {
+  overflow: visible;
+}
+
+
+.outline {
+  position: absolute;
+  border-radius: inherit;
+  overflow: hidden;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  inset: -2px -3.5px;
+}
+
+
+
+
+
+.state--default .icon svg {
+  animation: land 0.6s ease forwards;
+}
+.button:hover .state--default .icon {
+  transform: rotate(45deg) scale(1.25);
+}
+.button:focus .state--default svg {
+  animation: takeOff 0.8s linear forwards;
+}
+.button:focus .state--default .icon {
+  transform: rotate(0) scale(1.25);
+}
+@keyframes takeOff {
+  0% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(70px) rotate(45deg) scale(2);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(160px) rotate(45deg) scale(0);
+  }
+}
+@keyframes land {
+  0% {
+    transform: translateX(-60px) translateY(30px) rotate(-50deg) scale(2);
+    opacity: 0;
+    filter: blur(3px);
+  }
+  100% {
+    transform: translateX(0) translateY(0) rotate(0);
+    opacity: 1;
+    filter: blur(0);
+  }
+} */
